--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsz-uid",
-  "version": "0.2.1",
-  "description": "A generator for unique ids.",
+  "version": "0.2.2",
+  "description": "Deprecated: Renamed jsz-id",
   "keywords": "unique id ES6 flow",
   "author": "Marcus Kruse",
   "email": "marcus.kruse@vivai.de",
